syntax = "proto3";

option  go_package ="pb/redis_svr";

service redis_svr {
    rpc Get (GetReq) returns (GetRsp);
    rpc BatchGet (BatchGetReq) returns (BatchGetRsp);
    rpc Set (SetReq) returns (SetRsp);
    rpc SetWithExpire (SetWithExpireReq) returns (SetWithExpireRsp);
    rpc BatchSet (BatchSetReq) returns (BatchSetRsp);
    rpc SetIfNotExist (SetIfNotExistReq) returns (SetIfNotExistRsp);
    rpc Delete (DeleteReq) returns (DeleteRsp);
    //List----------------------------------<
    rpc LPush(LPushRequest) returns (ListResponse);
    rpc RPush(RPushRequest) returns (ListResponse);
    rpc LPop(LPopRequest) returns (PopResponse);
    rpc RPop(RPopRequest) returns (PopResponse);
    rpc LRange(LRangeRequest) returns (LRangeResponse);
    //Set----------------------------------<
    rpc SAdd(SAddRequest) returns (SAddResponse);
    rpc SRem(SRemRequest) returns (SRemResponse);
    rpc SISMember(SISMemberRequest) returns (SISMemberResponse);
    rpc SMembers(SMembersRequest) returns (SMembersResponse);
    rpc SCard(SCardRequest) returns (SCardResponse);
}

message GetReq {
    string key = 1;
}

message GetRsp {
    string val = 1;
    bool exist = 2;
}

message BatchGetReq {
    repeated string keys = 1;
}

message BatchGetRsp {
    map<string,string>vals = 1;
}

message SetReq {
    string key = 1;
    string val = 2;
}

message SetRsp {

}

message SetWithExpireReq {
    string key = 1;
    string val = 2;
    int32 expire = 3;
}

message SetWithExpireRsp {

}

message BatchSetReq {
    map<string,string>kv = 1;
}

message BatchSetRsp {

}

message SetIfNotExistReq {
    string key = 1;
    string val = 2;
}

message SetIfNotExistRsp {
    bool ok = 1; // true赋值成功，false赋值失败
}

message LPushRequest {
    string key = 1;
    repeated string values = 2;
    int64 expire_time = 3;  // 以秒为单位的过期时间，0 表示不过期
}

message RPushRequest {
    string key = 1;
    repeated string values = 2;
    int64 expire_time = 3;  // 以秒为单位的过期时间，0 表示不过期
}

message LPopRequest {
    string key = 1;
}

message RPopRequest {
    string key = 1;
}

message ListResponse {
}

message PopResponse {
}

message LRangeRequest {
    string key = 1;
    int64 start = 2;
    int64 stop = 3;
}

message LRangeResponse {
    repeated string values = 1;
}

message SAddRequest {
    string key = 1;
    string value = 2;
    int32 expire = 3; 
}

message SAddResponse {
}

message SRemRequest {
    string key = 1;
    string value = 2;
}

message SRemResponse {
}

message SISMemberRequest {
    string key = 1;
    string value = 2;
}

message SISMemberResponse {
    bool exists = 1;
}

message SMembersRequest {
    string key = 1;
}

message SMembersResponse {
    repeated string values = 1;
}

message SCardRequest {
    string key = 1;
}

message SCardResponse {
    int32 count = 1;
}

message DeleteReq {
    string key = 1;
}

message DeleteRsp {
    bool exist = 1;
}